# basu

./: .typos.toml  Cargo.toml  LICENSE  README.md
basu/: Cargo.toml
basu/src/: error.rs  event.rs  impl_async.rs  impl_sync.rs  lib.rs
basu/src/tests/: async_test.rs  mod.rs  sync_test.rs
