[workspace]
members = ["basu"]

[workspace.package]
authors = ["Leonz Chang<bellerophon00530@gmail.com>"]
version = "0.1.6"
edition = "2021"
repository = "https://github.com/leonzchang/basu.git"
documentation = "https://docs.rs/basu"
description = "Eventbus crate with sync and async features"
keywords = ["eventbus", "event", "async"]
categories = ["asynchronous"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
rayon = "1.7"
tokio = { version = "1", default-features = false, features = [
    "rt",
    "sync",
    "macros",
] }
thiserror = "2.0.11"
uuid = { version = "1", features = [
    "serde",
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
