[package]
name = "basu"
authors = ["Leonz Chang<bellerophon00530@gmail.com>"]
version = "0.1.1"
edition = "2021"
repository = "https://github.com/leonzchang/basu.git"
documentation = "https://docs.rs/basu"
readme = "../README.md"
description = "Eventbus crate with sync and async features"
keywords = ["eventbus", "event", "async"]
categories = ["asynchronous"]
license = "MIT"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[features]
default = ["async"]
sync = []
async = ["futures", "tokio", "async-trait"]