[package]
name = "basu"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
license = { workspace = true }
readme = "../README.md"
include = ["src/**/*.rs", "Cargo.toml"]

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[features]
default = ["async"]
sync = ["rayon"]
async = ["futures", "tokio", "async-trait"]


[package.metadata.docs.rs]
all-features = true
